# MotionAtlas

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: index.html
docs/: training.md
evaluation/: __init__.py
evaluation/lmms_eval/: pyproject.toml
evaluation/lmms_eval/lmms_eval/tasks/motionatlas_bench/: README.md  _default_template_yaml  motionatlas_bench.yaml  motionatlas_bench_first.yaml  utils.py
evaluation/lmms_eval/test/eval/: test_motionatlas_bench.py
evaluation/motionatlas_bench/: __init__.py  data.py  infer_captions.py  io_utils.py  judge_captions.py  media.py  prompt.py  render.py  run_eval.py  score.py
evaluation/motionatlas_bench/clients/: __init__.py  openai_compatible.py
projects/motionatlas/: __init__.py  build.py  config.py
projects/motionatlas/configs/: qwen3vl_4b_motionatlas.yaml
projects/motionatlas/datasets/: __init__.py  annotation.py  motionatlas_qwen3vl_dataset.py  rope2d.py  video_io.py
projects/motionatlas/datasets/collect_fns/: __init__.py  qwen3vl_collect_fn.py
projects/motionatlas/models/: __init__.py  qwen3vl.py
projects/motionatlas/tools/: convert_to_hf.py  inspect_dataset.py
scripts/: download_motionatlas_data.sh  serve_qwen3vl_vllm.sh  train_qwen3vl.sh
tools/: dist.sh  export_motionatlas_bench_masks.py  train.py
